--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     "Audácia", "Perigo", "Risco", "Incerteza", "Mistério", "Suspense", "Drama", "Filme", "Sentimento", "Sensação", "Toque",
     "Contato", "Conversa", "Diálogo", "Comunicação", "Expressão", "Linguagem", "Palavra", "Significado",
     "Entendimento", "Compreensão", "Conhecimento", "Sabedoria", "Inteligência", "Mente", "Cérebro", "Pensamento",
-    "Ideia", "Pesquisa", "Livros", "Leitura", "Ler","Entender", "Compreender", "Verdade", "Fato", "Relatar","Evento", "Ocorrência", "Situação",
+    "Ideia", "Pesquisa", "Livros", "Livro", "Leitura", "Ler","Entender", "Compreender", "Verdade", "Fato", "Relatar","Evento", "Ocorrência", "Situação",
     "Circunstância", "Contexto", "Ambiente", "Atmosfera", "Clima", "Estação", "Primavera", "Verão", "Inverno","Outono",
     "Inverno", "Frio", "Gelo", "Neve", "Montanha", "Pico", "Elevação", "Altitude", "Ônibus", "Voar", "Avião","Carro", "Voo", "Asa", "Pássaro",
     "Penas", "Bico", "Bicar", "Alimentação", "Caçar", "Peixes", "Sobrevoar", "Oceano", "Mar", "Praia", "Areia", "Sol", "Lua", "Queimadura",
