--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 "Imaginação", "Criatividade", "Inovação", "Novidade", "Descoberta", "Exploração", "Aventura", "Coragem", "Questionar", "Perguntar", 'Pergunta',
     "Audácia", "Perigo", "Risco", "Incerteza", "Mistério", "Suspense", "Drama", "Filme", "Sentimento", "Sensação", "Toque",
     "Contato", "Conversa", "Diálogo", "Comunicação", "Expressão", "Linguagem", "Palavra", "Significado",
-    "Entendimento", "Compreensão", "Conhecimento", "Sabedoria", "Inteligência", "Mente", "Cérebro", "Pensamento",
+    "Entendimento", "Compreensão", "Conhecimento", "Sabedoria", "Inteligência", "Mente", "Cérebro", "Atitude", "Pensamento",
     "Ideia", "Pesquisa", "Livros", "Livro", "Leitura", "Ler", "Leitor","Entender", "Compreender", "Verdade", "Fato", "Relatar","Evento", "Ocorrência", "Situação",
     "Circunstância", "Contexto", "Ambiente", "Atmosfera", "Clima", "Estação", "Primavera", "Verão", "Inverno","Outono",
     "Inverno", "Frio", "Gelo", "Neve", "Montanha", "Pico", "Elevação", "Altitude", "Ônibus", "Voar", "Avião","Carro", "Voo", "Asa", "Pássaro",
@@ -88,12 +88,34 @@
     "Respeito", "Apoio", "Ajuda", "Assistência", "Colaboração", "Cooperação", "Solidariedade", "União", "Fraternidade",
     "Irmandade", "Comunhão", "Compartilhamento", "Conexão", "Relacionamento", "Ligação", "Vínculo", "Laço", "Associação",
     "Amizade", "Camaradagem", "Companheirismo", "Confiança", "Lealdade", "Fidelidade", "Devoção", "Dedicação", "Amor",
-    "Carinho", "Afeto", "Afeição", "Ternura", "Paixão", "Romance", "Desejo", "Atração", "Sedução", "Flerte", "Namoro",
+    "Carinho", "Afeto", "Afeição", "Ternura", "Paixão", "Romance", "Desejo", "Atração", "Sedução","Flerte", "Namoro",
     "Compromisso","Decisão", "Pensar", "Aceitar",  "Relacionamento", "Parceria", "União", "Casamento", "Matrimônio", "Filhos", "Família",
     "Casal", "Marido", "Esposa", "Cônjuge", "Companheiro", "Companheira", "Amante", "Amador", "Apreciador", "Olho", "Boca", "Comer","Comida", "Feijão", "Arroz",
     "Almoço", "Janta", "Café", "Pão", "Leite", "Acordar", "Cama","Dormir", "Cansar", "Descansar", "Diverção", "Parque", "Amigos", "Festa", "Bolo", "Sobremesa", "Doce", "Doceiro", "Trabalhador", "Programador", "Programa", "Computador", "Site", "Aplicativo", "Mensagem", "Ficante", "Segredo", "Secreto", "Medo", "Alegria", "Tristeza", "Amargura", "Depressão", "Psicólogo", "Recuperação", "Esperança", "Guerreiro", "Guerra", "Exército", "País", "Presidente", "Eleitor", "Voto", "Eleição", "Vitória", "Maioria", "Contagem", "Votos",
     "Assembleia", "Decisão", "Pensar", "Querer", "Ter","Vontade", "Arriscar", "Perigo", "Afogar","Lago", "Água", "Oceano", "Mar", "Praia", "Areia", "Sol", "Lua", "Queimadura", "Proteção", 
-    "Creme", "Hidratação", "Suco", "Fruta", "Maçã", "Pera", "Uva", "Vermelho","Amarelo", "Verde", "Roxo", "Machucado", "Acidente", "Batida", "Bater", "Apanhar", "Revidar", "Vingança", "Planejar", "Esperar", "Aguardar", "Chegar", "Chegada", "Esforço","Preparação", "Estudo","Caderno", "Escrita", "Caneta", "Tinta", "Papel", "Árvore", "Madeira", "Floresta", "Ecossistema", "Biodiversidade", "Conservação", "Conhecimento", "Estudo", "Aprendizado", "Escola", "Professor", "Aluno", "Estudar", "Tecnologia", "Celular", "Computador", "Televisão", "Tablet", "Programar", "Código", "Renan", "Jogo", "Jogador", "Partida", "Boneco", "Roupa", "Calça", "Sapato", "Pés", "Olho", "Piscar", "Dormir", "Sonhar", "Imaginar", "Criar", "Forjar"
+    "Creme", "Hidratação", "Suco", "Fruta", "Maçã", "Pera", "Uva", "Vermelho","Amarelo", "Verde", "Roxo", "Machucado", "Acidente", "Batida", "Bater", "Apanhar", "Revidar", "Vingança", "Planejar", "Esperar", "Aguardar", "Chegar", "Chegada", "Esforço","Preparação", "Estudo","Caderno", "Escrita", "Caneta", "Tinta", "Papel", "Árvore", "Madeira", "Floresta", "Ecossistema", "Biodiversidade", "Conservação", "Conhecimento", "Estudo", "Aprendizado", "Escola", "Professor", "Aluno", "Estudar", "Tecnologia", "Celular", "Computador", "Televisão", "Tablet", "Programar", "Código", "Renan", "Jogo", "Jogador", "Partida", "Boneco", "Roupa", "Calça", "Sapato", "Pés", "Olho", "Piscar", "Dormir", "Sonhar", "Imaginar", "Criar", "Forjar", "Imaginar", "Jogar", "Jogo", "Dama", "Xadrez", "Jogada", "Azar", "Sorte", "Presente", "Surpresa", "Emoção", "Dor", "Calor", "Ventilador",
+    "Ar",
+    "Frescor",
+    "Refrescante",
+    "Breeze",
+    "Vento",
+    "Corrente",
+    "Brisa",
+    "Sopro",
+    "Respiração",
+    "Oxigênio",
+    "Natureza",
+    "Ambiente",
+    "Janela",
+    "Conforto",
+    "Refrigeração",
+    "Termostato",
+    "Calor",
+    "Aconchego",
+    "Lar",
+    "Família",
+    "Moradia",
+    "Casa"
 ]
      let contador = 0
      let palavraSorteada = lista[Math.floor(Math.random() * 499)]
