--- a/index.html
+++ b/index.html
@@ -107,6 +107,13 @@
     "Natureza",
     "Ambiente",
     "Janela",
+     "Vista", 
+     "Olho",
+         "Mão",
+         "Boca",
+         "Cabeça",
+         "Corpo",
+         "Deitado", 
     "Conforto",
     "Refrigeração",
     "Termostato",
