--- a/index.html
+++ b/index.html
@@ -111,6 +111,8 @@
      "Olho",
          "Mão",
          "Boca",
+        "Sorrir", 
+         "Sorriso",
          "Cabeça",
          "Corpo",
          "Deitado", 
