--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     "Hora", "Nascer do sol", "Manhã", "Café", "Energia", "Elétrico", "Bateria", "Carregador", "Conexão", "Internet",
     "Rede", "Teia", "Aranha", "Inseto", "Formiga", "Colônia", "Sociedade", "Brasil","Comunidade", "Grupo", "Equipe", "Time",
     "Pulso", "Batimento", "Coração", "Sentimento", "Emoção", "Expressão", "Arte", "Pintura", "Tinta", "Escova",
-    "Cabelo", "Beleza", "Elegância", "Graciosidade", "Dança", "Música", "Harmonia", "Melodia", "Ritmo", "Tambor",
+    "Cabelo", "Beleza", "Elegância", "Graciosidade", "Dança", "Música", "Letra", "Harmonia", "Melodia", "Ritmo", "Tambor",
     "Instrumento", "Guitarra", "Corda", "Arco", "Flecha", "Alvo", "Precisão", "Certeza", "Confiança", "Segurança",
     "Proteção", "Abrigo","Casa", "Móveis", "Sofá","Fogão", "Televisão", "Mesa","Penteadeira", "Cadeira", "Lugar", "Lar", "Família", "Parentesco", "Laço", "Amizade", "Companheirismo", "Parceria",
     "Cooperação", "Trabalho", "Escrever", "Cozinhar", "Lavar", "Limpar","Cuidar","Esforço", "Dedicação", "Tentativa","Tentar","Compromisso", "Responsabilidade", "Dever", "Obrigação",
@@ -82,15 +82,15 @@
     "Excitação", "Entusiasmo", "Paixão", "Desejo", "Vontade", "Determinação", "Persistência", "Resiliência",
     "Coragem", "Valentia", "Heroísmo", "Bravura", "Audácia", "Intrepidez", "Ousadia", "Falha", "Descaramento",
     "Coragem", "Destemor", "Medo", "Temor", "Apreensão", "Preocupação", "Nervosismo", "Ansiedade", "Tensão", "Estresse",
-    "Pressão", "Sobrecarga", "Peso", "Responsabilidade", "Compromisso", "Dever", "Obrigação", "Moral", "Ética",
+    "Pressão", "Sobrecarga", "Peso", "Responsabilidade", "Compromisso", "Dever", "Obrigação", "Cuidar","Moral", "Ética",
     "Integridade", "Honestidade", "Honra", "Decência", "Respeito", "Cortesia", "Educação", "Boas maneiras",
-    "Civilidade", "Urbanidade", "Gentileza", "Amabilidade", "Cortesia", "Simpatia", "Atenção", "Consideração",
+    "Civilidade", "Urbanidade", "Gentileza", "Amabilidade", "Irmandade", "Irmão", "Irmãos","Cortesia", "Simpatia", "Atenção", "Consideração",
     "Respeito", "Apoio", "Ajuda", "Assistência", "Colaboração", "Cooperação", "Solidariedade", "União", "Fraternidade",
     "Irmandade", "Comunhão", "Compartilhamento", "Conexão", "Relacionamento", "Ligação", "Vínculo", "Laço", "Associação",
     "Amizade", "Camaradagem", "Companheirismo", "Confiança", "Lealdade", "Fidelidade", "Devoção", "Dedicação", "Amor",
     "Carinho", "Afeto", "Afeição", "Ternura", "Paixão", "Romance", "Desejo", "Atração", "Sedução","Flerte", "Namoro",
     "Compromisso","Decisão", "Pensar", "Aceitar",  "Relacionamento", "Parceria", "União", "Casamento", "Matrimônio", "Filhos", "Família",
-    "Casal", "Marido", "Esposa", "Cônjuge", "Companheiro", "Companheira", "Amante", "Amador", "Apreciador", "Olho", "Boca", "Comer","Comida", "Feijão", "Arroz",
+    "Casal", "Marido", "Esposa", "Cônjuge", "Companheiro", "Companheira", "Amante", "Amador", "Apreciador", "Vista", "Olho", "Boca", "Comer","Comida", "Feijão", "Arroz",
     "Almoço", "Janta", "Café", "Pão", "Leite", "Acordar", "Cama","Dormir", "Cansar", "Descansar", "Diverção", "Parque", "Amigos", "Festa", "Bolo", "Sobremesa", "Doce", "Doceiro", "Trabalhador", "Programador", "Programa", "Computador", "Site", "Aplicativo", "Mensagem", "Ficante", "Segredo", "Secreto", "Medo", "Alegria", "Tristeza", "Amargura", "Depressão", "Psicólogo", "Recuperação", "Esperança", "Guerreiro", "Guerra", "Exército", "País", "Presidente", "Eleitor", "Voto", "Eleição", "Vitória", "Maioria", "Contagem", "Votos",
     "Assembleia", "Decisão", "Pensar", "Querer", "Ter","Vontade", "Arriscar", "Perigo", "Afogar","Lago", "Água", "Oceano", "Mar", "Praia", "Areia", "Sol", "Lua", "Queimadura", "Proteção", 
     "Creme", "Hidratação", "Suco", "Fruta", "Maçã", "Pera", "Uva", "Vermelho","Amarelo", "Verde", "Roxo", "Machucado", "Acidente", "Batida", "Bater", "Apanhar", "Revidar", "Vingança", "Planejar", "Esperar", "Aguardar", "Chegar", "Chegada", "Esforço","Preparação", "Estudo","Caderno", "Escrita", "Caneta", "Tinta", "Papel", "Árvore", "Madeira", "Floresta", "Ecossistema", "Biodiversidade", "Conservação", "Conhecimento", "Estudo", "Aprendizado", "Escola", "Professor", "Aluno", "Estudar", "Tecnologia", "Celular", "Computador", "Televisão", "Tablet", "Programar", "Código", "Renan", "Jogo", "Jogador", "Partida", "Boneco", "Roupa", "Calça", "Sapato", "Pés", "Olho", "Piscar", "Dormir", "Sonhar", "Imaginar", "Criar", "Forjar", "Imaginar", "Jogar", "Jogo", "Dama", "Xadrez", "Jogada", "Azar", "Sorte", "Presente", "Surpresa", "Emoção", "Dor", "Calor", "Ventilador",
