--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     "Pressão", "Sobrecarga", "Peso", "Responsabilidade", "Compromisso", "Dever", "Obrigação", "Cuidar","Moral", "Ética",
     "Integridade", "Honestidade", "Honra", "Decência", "Respeito", "Cortesia", "Educação", "Boas maneiras",
     "Civilidade", "Urbanidade", "Gentileza", "Amabilidade", "Irmandade", "Irmão", "Irmãos","Cortesia", "Simpatia", "Atenção", "Consideração",
-    "Respeito", "Apoio", "Ajuda", "Assistência", "Colaboração", "Cooperação", "Solidariedade", "União", "Fraternidade",
+    "Respeito", "Apoio", "Ajuda", "Assistência", "Colaboração", "Cooperação", "Solidariedade", "Amizade", "Amigos", "União", "Fraternidade",
     "Irmandade", "Comunhão", "Compartilhamento", "Conexão", "Relacionamento", "Ligação", "Vínculo", "Laço", "Associação",
     "Amizade", "Camaradagem", "Companheirismo", "Confiança", "Lealdade", "Fidelidade", "Devoção", "Dedicação", "Amor",
     "Carinho", "Afeto", "Afeição", "Ternura", "Paixão", "Romance", "Desejo", "Atração", "Sedução","Flerte", "Namoro",
