--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     "Soldado", "Exército", "Força", "Poder", "Autoridade", "Liderança", "Comando", "Controle", "Domínio",
     "Submissão", "Obediência", "Respeito", "Honra", "Dignidade", "Orgulho", "Vaidade", "Narcisismo", "Egoísmo",
     "Altruísmo", "Generosidade", "Solidariedade", "Ajuda", "Suporte", "Assistência", "Socorro", "Emergência",
-    "Crise", "Problema", "Solução", "Resolução","Inteligente", "Inteligência" "Conclusão", "Encerramento", "Fim", "Término", "Começo", "Início",
+    "Crise", "Problema", "Solução", "Resolução","Inteligente", "Inteligência", "Conclusão", "Encerramento", "Fim", "Término", "Começo", "Início",
     "Origem", "Causa", "Consequência", "Efeito", "Resultado", "Consequência", "Impacto", "Influência", "Poder", "Força", "Energia",
     "Movimento", "Ação", "Reação", "Resistência", "Adaptabilidade", "Flexibilidade", "Mudança", "Transformação",
     "Evolução", "Desenvolvimento", "Progresso", "Crescimento", "Expansão", "Amplitude", "Largura", "Extensão",
