--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     "Alegria", "Diversão", "Risada", "Comédia", "Teatro", "Palhaço","Palhaçada", "Circo", "Malabarismo", "Equilíbrio", "Estabilidade",
     "Fundação", "Base", "Estrutura", "Arquitetura", "Construção", "Edifício", "Arranha-céu", "Altura", "Céu",
     "Estrela", "Dia","Noite","Galáxia", "Universo", "Cosmos", "Infinito", "Eternidade", "Tempo", "Relógio", "Segundo", "Minuto",
-    "Hora", "Nascer do sol", "Manhã", "Café", "Energia", "Elétrico", "Bateria", "Carregador", "Conexão", "Internet",
+    "Hora", "Momento", "Manhã", "Café", "Energia", "Elétrico", "Bateria", "Carregador", "Conexão", "Internet",
     "Rede", "Teia", "Aranha", "Inseto", "Formiga", "Colônia", "Sociedade", "Brasil","Comunidade", "Grupo", "Equipe", "Time",
     "Pulso", "Batimento", "Coração", "Sentimento", "Emoção", "Expressão", "Arte", "Pintura", "Tinta", "Escova",
     "Cabelo", "Beleza", "Elegância", "Graciosidade", "Dança", "Música", "Letra", "Harmonia", "Melodia", "Ritmo", "Tambor",
