--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
     "Proteção", "Abrigo","Casa", "Móveis", "Sofá","Fogão", "Televisão", "Mesa","Penteadeira", "Cadeira", "Lugar", "Lar", "Família", "Parentesco", "Laço", "Amizade", "Companheirismo", "Parceria",
     "Cooperação", "Trabalho", "Escrever", "Cozinhar", "Lavar", "Limpar","Cuidar","Esforço", "Dedicação", "Tentativa","Tentar","Compromisso", "Responsabilidade", "Dever", "Obrigação",
     "Encargo", "Balança","Peso", "Pressão", "Tensão", "Pressão", "Relaxamento", "Descanso", "Sono", "Sonho", "Fantasia",
-"Imaginação", "Criatividade", "Inovação", "Novidade", "Descoberta", "Exploração", "Aventura", "Coragem", "Questionar", "Perguntar", 'Pergunta',
+"Imaginação", "Criatividade", "Inovação", "Invenção", "Gênio", "Novidade", "Descoberta", "Exploração", "Aventura", "Coragem", "Questionar", "Perguntar", 'Pergunta',
     "Audácia", "Perigo", "Risco", "Incerteza", "Mistério", "Suspense", "Drama", "Filme", "Sentimento", "Sensação", "Toque",
     "Contato", "Conversa", "Diálogo", "Comunicação", "Expressão", "Linguagem", "Palavra", "Significado",
     "Entendimento", "Compreensão", "Conhecimento", "Sabedoria", "Inteligência", "Mente", "Cérebro", "Atitude", "Pensamento",
-    "Ideia", "Pesquisa", "Livros", "Livro", "Leitura", "Ler", "Leitor","Entender", "Compreender", "Verdade", "Fato", "Relatar","Evento", "Ocorrência", "Situação",
+    "Ideia", "Pesquisa", "Livros", "Livro", "Caneta", "Lápis", "Estojo", "Saber","curiosidade", "Ler", "Leitura", "Leitor","Entender", "Compreender", "Verdade", "Fato", "Relatar","Evento", "Ocorrência", "Situação",
     "Circunstância", "Contexto", "Ambiente", "Atmosfera", "Clima", "Estação", "Primavera", "Verão", "Inverno","Outono",
     "Inverno", "Frio", "Gelo", "Neve", "Montanha", "Pico", "Elevação", "Altitude", "Ônibus", "Voar", "Avião","Carro", "Voo", "Asa", "Pássaro",
     "Penas", "Bico", "Bicar", "Alimentação", "Caçar", "Peixes", "Sobrevoar", "Oceano", "Mar", "Praia", "Areia", "Sol", "Lua", "Queimadura",
@@ -79,7 +79,7 @@
     "Abundância", "Riqueza", "Prosperidade", "Fortuna", "Dinheiro", "Capital", "Investimento", "Retorno", "Lucro",
     "Benefício", "Elite", "Privilégio", "Oportunidade", "Sorte", "Azar", "Destino", "Fatalidade", "Coincidência",
     "Acaso", "Casualidade", "Aleatoriedade", "Incerteza", "Risco", "Perigo", "Aventura", "Emoção", "Adrenalina",
-    "Excitação", "Entusiasmo", "Paixão", "Desejo", "Vontade", "Determinação", "Persistência", "Resiliência",
+    "Milagre", "Entusiasmo", "Paixão", "Desejo", "Vontade", "Determinação", "Persistência", "Resiliência",
     "Coragem", "Valentia", "Heroísmo", "Bravura", "Audácia", "Intrepidez", "Ousadia", "Falha", "Descaramento",
     "Coragem", "Destemor", "Medo", "Temor", "Apreensão", "Preocupação", "Nervosismo", "Ansiedade", "Tensão", "Estresse",
     "Pressão", "Sobrecarga", "Peso", "Responsabilidade", "Compromisso", "Dever", "Obrigação", "Cuidar","Moral", "Ética",
